--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -4,9 +4,9 @@
 
 В геометрическом моделировании используются термины «поверхностное моделирование» (моделирование поверхностей) и «твердотельное моделирование» (моделирование твердых тел, solid modelling). В первом случае результатом моделирования является некоторая оболочка (или несколько оболочек), описывающая поверхность моделируемого объекта. Во втором случае результатом моделирования является полная геометрическая модель твердого тела, которая позволяет автоматизированно ответить на любой вопрос о его геометрических свойствах (вычисление объема тела, поиск пересечений с другими телами, изображение тела с любого ракурса и т.д.). Процесс моделирования в первом случае также значительно отличается от процесса моделирования во втором случае.
 
-В поверхностном моделировании сначала создаются и модифицируются требуемым образом поверхности, описывающие отдельные элементы моделируемого объекта. Эти поверхности обрезают по линиям пересечения, сопрягают друг с другом поверхностями скругления или перехода (fillets, chamfers), а также выполняют над ними другие операции. Затем из полученных поверхностей собирают оболочку. Этот подход к моделированию является непосредственной эволюцией традиционного подхода к построению чертежей. В поверхностном моделировании результирующая оболочка не обязательно должна быть замкнутой. Она может отражать лишь часть (главную часть) моделируемого объекта. Поверхностное моделирование позволяет сосредоточить усилия на сложных формах объекта и широко применяется для проектирования кузовов автомобилей и планеров самолетов.
+В поверхностном моделировании сначала создаются и модифицируются требуемым образом поверхности, описывающие отдельные элементы моделируемого объекта. Эти поверхности обрезают по линиям пересечения, сопрягают друг с другом поверхностями скругления или перехода (англ. fillets, chamfers), а также выполняют над ними другие операции. Затем из полученных поверхностей собирают оболочку. Этот подход к моделированию является непосредственной эволюцией традиционного подхода к построению чертежей. В поверхностном моделировании результирующая оболочка не обязательно должна быть замкнутой. Она может отражать лишь часть (главную часть) моделируемого объекта. Поверхностное моделирование позволяет сосредоточить усилия на сложных формах объекта и широко применяется для проектирования кузовов автомобилей и планеров самолетов.
 
-В твердотельном моделировании с самого начала работа идет с целостной моделью тела, а не с отдельными поверхностями. Например, в граничном представлении, оболочки (shells) полностью описывают поверхности моделируемых объектов, отделяющие их внутренний объем от остальной части пространства. Процесс построения тела в данном случае часто аналогичен процессу изготовления моделируемого объекта. Сначала создается модель некоторой заготовки простой формы. Далее заготовка изменяется необходимым образом. Для этого могут используются булевы операции над телами, операция построения тонкостенного тела из заготовки, операция скругления ребер, операция построения ребер жесткости и другие операции. На практике используется несколько представлений геометрии "--- подходов к описанию твердых тел.
+В твердотельном моделировании с самого начала работа идет с целостной моделью тела, а не с отдельными поверхностями. Например, в граничном представлении, оболочки (англ. shells) полностью описывают поверхности моделируемых объектов, отделяющие их внутренний объем от остальной части пространства. Процесс построения тела в данном случае часто аналогичен процессу изготовления моделируемого объекта. Сначала создается модель некоторой заготовки простой формы. Далее заготовка изменяется необходимым образом. Для этого могут используются булевы операции над телами, операция построения тонкостенного тела из заготовки, операция скругления ребер, операция построения ребер жесткости и другие операции. На практике используется несколько представлений геометрии "--- подходов к описанию твердых тел.
 
 Понятие твердотельного моделирования опирается на потребность в информационной полноте в системах механического геометрического моделирования в том смысле, что любая компьютерная модель должна отвечать на все геометрические вопросы, которые могут быть заданы по отношению к соответствующему физическому объекту. Это требование не противоречит возможности существования нескольких компьютерных представлений одного и того же физического объекта, если такие представления согласованы. Невозможно вычислительно проверить информационную полноту представления, если понятие физического объекта не определено в терминах вычислимых математических свойств и не зависит от какого-либо конкретного представления. Такие рассуждения привели к разработке парадигмы моделирования, которая сформировала область твердотельного моделирования, как мы ее знаем сегодня.
 
@@ -36,21 +36,21 @@ D. Meagher, “Geometric modeling using octree encoding,” Computer Graphics
 and Image Processing, vol. 19, no. 2, pp. 129–147, June 1982.
 
 [8] P. Brunet and I. Navazo, Solid representation and operation using extended
-octrees," ACM Trans. Graph., vol. 9, no. 2, pp. 170{197, Apr. 1990. [Online].
+octrees," ACM Trans. Graph., vol. 9, no. 2, pp. 170 197, Apr. 1990. [Online].
 Available: http://doi.acm.org/10.1145/78956.78959
 
 [16] E. Dyllong and C. Grimm, A reliable extended octree representation of
 csg objects with an adaptive subdivision depth," in Parallel Processing and
 Applied Mathematics, ser. Lecture Notes in Computer Science, R. Wyrzykowski,
 J. Dongarra, K. Karczewski, and J. Wasniewski, Eds. Springer Berlin
-Heidelberg, 2008, vol. 4967, pp. 1341{1350. [Online]. Available: http:
+Heidelberg, 2008, vol. 4967, pp. 1341 1350. [Online]. Available: http:
 //dx.doi.org/10.1007/978-3-540-68111-3 142
 
 [17] S. F. Frisken, R. N. Perry, A. P. Rockwood, and T. R. Jones, Adaptively
 sampled distance fields: a general representation of shape for computer
 graphics," in Proceedings of the 27th annual conference on Computer graphics
 and interactive techniques, ser. SIGGRAPH ’00. New York, NY, USA: ACM
-Press/Addison-Wesley Publishing Co., 2000, pp. 249{254. [Online]. Available:
+Press/Addison-Wesley Publishing Co., 2000, pp. 249 254. [Online]. Available:
 http://dx.doi.org/10.1145/344779.344899
 
 [13] L. de Figueiredo, L. Velho, and J. de Oliveira, Revisiting adaptively sampled
@@ -60,14 +60,14 @@ of XIV Brazilian Symposium on, 2001, pp. 377
 [43] R. N. Perry and S. F. Frisken, Kizamu: a system for sculpting digital
 characters," in Proceedings of the 28th annual conference on Computer graphics
 and interactive techniques, ser. SIGGRAPH ’01. New York, NY, USA: ACM,
-2001, pp. 47{56. [Online]. Available: http://doi.acm.org/10.1145/383259.383264
+2001, pp. 47 56. [Online]. Available: http://doi.acm.org/10.1145/383259.383264
 
 [46] A. Sullivan, H. Erdim, R. N. Perry, and S. F. Frisken, High accuracy
 nc milling simulation using composite adaptively sampled distance fields,"
-Comput. Aided Des., vol. 44, no. 6, pp. 522{536, Jun. 2012. [Online]. Available:
+Comput. Aided Des., vol. 44, no. 6, pp. 522536, Jun. 2012. [Online]. Available:
 http://dx.doi.org/10.1016/j.cad.2012.02.002
 
-\section{{Декомпозиция на ячейки} \label{sect_cell_decompositions}
+\section{Декомпозиция на ячейки} \label{sect_cell_decompositions}
 
 Твердое тело может быть представлено разложением на набор ячеек. Схемы воксельного представления являются частными случаями разложения на ячейки, где все ячейки представленны параллелепипедами и образуют регулярную сетку. Более подробное определение дано в \cite{Requicha80}.
 
@@ -113,7 +113,7 @@ subdivision which dovetails with ASDF creation and population.
 Функциональное представление может быть тривиально преобразовано в воксельное представление путем вычисления значений в узлах воксельной сетки, а также в граничное представление с использованием алгоритмов триангуляции, например, алгоритма марширующих кубов [29] или марширующих тетраэдров [36].
 
 [29] W. E. Lorensen and H. E. Cline, Marching cubes: A high resolution 3d surface
-construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
+construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163
 169, Aug. 1987. [Online]. Available: http://doi.acm.org/10.1145/37402.37422
 
 36 H. Muller and M. Wehle, Visualization of implicit surfaces using adaptive tetrahedrizations," Scientific Visualization Conference, vol. 0, p. 243, 1997.
@@ -135,17 +135,25 @@ construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
 Многие эксперты в CAD/CAM области того времени считали трассировку лучей непрактичным методом "грубой силы" \todo{[Roth]}. \todo{[Roth]} в своей работе приводит практическое описание алгоритма трассировки лучей для задачи визуализации CSG моделей, а также приводит оптимизации алгоритма. \todo{[Roth]} использует ограничивающие объемы для ускоренного отбрасывания CSG поддеревьев, гарантированно непересекающихся с лучом. \todo{[Roth]} делает вывод о важности пространственной когерентности примитивов в дереве и предполагает, что CSG дерево может быть автоматически переупорядочено для улучшения пространственной когерентности. Дальнейшие оптимизации для алгоритма трассировки лучей применительно к CSG были предложены в работе \todo{[Bronsvoort84]}.
 
 Алгоритмы бросания лучей \todo{[Roth, Goldstein and Malin]} применяют один и тот же алгоритм 
-Алгоритмы бросания (англ. ray-firing, ray-shooting) лучей \todo{[Roth, Goldstein and Malin]} применяют один и тот же алгоритм для каждой точки на экране для определения видимости поверхностей. Задача поиска поверхности соответствующей CSG выражению сводится к одномерной задаче на луче. Формализованная классификация одномерных алгоритмов решения булевых выражений дана в работе \todo{[Tilove(atheron-15)]}. Главным преимуществом подходов, основанных на бросании лучей, является отсутствие необходимости вычислять полную граничную поверхность, соответствующую CSG модели. Для определения видимой точки на луче, пересекающем CSG модель, можно использовать следующий алгоритм:
+Алгоритмы бросания (англ. ray-firing, ray-shooting) лучей \todo{[Roth, Goldstein and Malin]} применяют один и тот же алгоритм для каждой точки на экране для определения видимости поверхностей. Задача поиска поверхности соответствующей CSG выражению сводится к одномерной задаче на луче. Формализованная классификация одномерных алгоритмов решения булевых выражений дана в работе \todo{[Tilove(atheron-15)]}. Главным преимуществом подходов, основанных на бросании лучей, является отсутствие необходимости вычислять полную граничную поверхность, соответствующую CSG модели. Для определения видимой точки на луче, пересекающем CSG модель, можно использовать следующий алгоритм показанный на рис. \ref{fig:roth_algo}.
 
-\includegraphics[]{1.png}
+\begin{figure} 
+  \centering
+  \includegraphics [scale=0.8] {1.png}
+  \caption{Алгоритм бросания луча}
+  \label{fig:roth_algo}
+\end{figure}
 
-\todo{Рисунок 3} иллюстрирует вычисление булевых операций в одномерном пространстве для двух примитивов. В дополнение к простоте, метод имеет дополнительное преимущество для визуализации: после того как ближайшая точка определена, дальнейшие вычисления можно отбросить. Однако, перед тем как применить эти простые правила, необходимо пересечь луч с CSG примитивами и отсортировать точки пересечения. К тому же, все эти шаги должны быть выполнены для каждого пикселя изображения. \todo{[Roth]} описывает процедуру отсечения для уменьшения числа поверхностей, с которыми нужно пересечь луч для каждого пикселя. Однако, хотя такая оптимизация и дает эффект, тем не менее вычислительная сложность алгоритма не меняется. \todo{[Roth]} также приводит метод для определения и визуализации только силуэта и линий пересечения поверхностей, но этот метод не совместим с затененной визуализацией.
+В дополнение к простоте, метод имеет дополнительное преимущество для визуализации: после того как ближайшая точка определена, дальнейшие вычисления можно отбросить. Однако, перед тем как применить эти простые правила, необходимо пересечь луч с CSG примитивами и отсортировать точки пересечения. К тому же, все эти шаги должны быть выполнены для каждого пикселя изображения. \todo{[Roth]} описывает процедуру отсечения для уменьшения числа поверхностей, с которыми нужно пересечь луч для каждого пикселя. Однако, хотя такая оптимизация и дает эффект, тем не менее вычислительная сложность алгоритма не меняется. \todo{[Roth]} также приводит метод для определения и визуализации только силуэта и линий пересечения поверхностей, но этот метод не совместим с затененной визуализацией.
 
-\includegraphics[]{2.png}}
+Широко используемый в то время (1980-е) для задачи определения видимости полигонов, построчный подход к визуализации (англ. scanline rendering), также был адаптирован для визуализации CSG моделей \todo{[atherton1983]}. Типичный scanline алгоритм, использующий Y-X-Z сортировку полигонов, представлен на рис. \ref{fig:atherton_algo}
 
-Широко используемый в то время (1980-е) для задачи определения видимости полигонов, построчный подход к визуализации (англ. scanline rendering), также был адаптирован для визуализации CSG моделей \todo{[atherton1983]}. Типичный scanline алгоритм, использующий Y-X-Z сортировку полигонов, представлен ниже:
-
-\includegraphics[]{scanline.png}}
+\begin{figure} 
+  \centering
+  \includegraphics [scale=0.8] {scanline.png}
+  \caption{Алгоритм scanline}
+  \label{fig:atherton_algo}
+\end{figure}
 
 Сегментом в scanline алгоритмах называется часть полигона, образованная пересечением scanline плоскости и полигона.
 
