--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -182,7 +182,7 @@
 % ГОСТ Р 7.0.11-2011, Приложение Б, Статьи
 
 @ARTICLE{Requicha80,
-  author = {A. G. Requicha},
+  author={Requicha, A. G.},
   title = {Representations for Rigid Solids: Theory, Methods, and Systems },
   journal = {Computing Surveys},
   year = {1980},
