--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,78 +1,57 @@
 
-{\actuality} Обзор, введение в тему, обозначение места данной работы в
-мировых исследованиях и~т.\:п., можно использовать ссылки на другие
-работы~\cite{Gosele1999161} (если их~нет, то в автореферате
-автоматически пропадёт раздел <<Список литературы>>). Внимание! Ссылки
-на другие работы в разделе общей характеристики работы можно
-использовать только при использовании \verb!biblatex! (из-за технических
-ограничений \verb!bibtex8!. Это связано с тем, что одна
-и~та~же~характеристика используются и в тексте диссертации, и в
-автореферате. В последнем, согласно ГОСТ, должен присутствовать список
-работ автора по теме диссертации, а~\verb!bibtex8! не умеет выводить в одном
-файле два списка литературы).
+{\actuality} Конструктивно-блочное представление (Constructive Solid Geometry, CSG) используется в современных САПР в основном как вспомогательное или промежуточное представление, для выполнения булевых операций над телами. Для моделирования тел, получаемых аддитивными (3d-печать) и субтрактивными (фрезерование) методами CSG представление остается наиболее естественным. В таких задачах отказ от дополнительных схем представления (граничное представление, воксельное представление) позволил бы значительно упростить соответствующие САПР, повысить быстродействие систем. Для этого требуется устранить один из главных недостатков CSG представления: невозможность интерактивной визуализации сложных CSG моделей (время фотореалистичной визуализации CSG-модели средней сложности для лучших их существующих алгоритмов трассировки составляет порядка десятков секунд), что сделало бы возможным развитие САПР, использующих CSG как основное представление твердых тел.
 
-Для генерации содержимого титульного листа автореферата, диссертации
-и~презентации используются данные из файла \verb!common/data.tex!. Если,
-например, вы меняете название диссертации, то оно автоматически
-появится в~итоговых файлах после очередного запуска \LaTeX. Согласно
-ГОСТ 7.0.11-2011 <<5.1.1 Титульный лист является первой страницей
-диссертации, служит источником информации, необходимой для обработки и
-поиска документа>>. Наличие логотипа организации на титульном листе
-упрощает обработку и поиск, для этого разметите логотип вашей
-организации в папке images в формате PDF (лучше найти его в векторном
-варианте, чтобы он хорошо смотрелся при печати) под именем
-\verb!logo.pdf!. Настроить размер изображения с логотипом можно в
-соответствующих местах файлов \verb!title.tex!  отдельно для
-диссертации и автореферата. Если вам логотип не~нужен, то просто
-удалите файл с логотипом.
+Визуализация CSG активно исследовалась в 80-х и 90-х годах, что подтверждается значительным числом публикаций, среди которых следует отметить работы R. Goldstein, A. Ricci, S. Roth, A. Requicha, P. Atheron, W. Bronsvoort, N. Okino, J. Rossignac, J. Goldfeather, T. Duff, N. Stewart. Первые работы по визуализации CSG использовали трассировку лучей для получения изображения. Однако, в то время это подход не позволял достичь интерактивной визуализации даже на простых сценах. Позже, с распространением аппаратной поддержки растеризации, были разработаны алгоритмы, основанные на растеризации  CSG примитивов и использовании буфера глубины, которые позволяли интерактивно визуализировать простые сцены (от десятков до тысяч примитивов). С тех пор, в связи с развитием графических процессоров и появлением новых исследований в области ускоряющих структур (acceleration structures), появилась возможность разрабатывать новые, более эффективные, алгоритмы визуализации CSG моделей, оптимизированные для выполнения на современных графических процессорах. В новых условиях, вновь актуальной оказывается трассировка лучей. Использование трассировки лучей позволяет использовать более простые алгоритмы (проблема сводится к одномерной) и свести вычисления к массивно параллельным с выполнением алгоритма каждого луча на графическом процессоре (GPU). Также, использование трассировки лучей в качестве основы для алгоритма визуализации CSG позволяет расширить его до полноценного алгоритма глобального освещения.
 
-% {\progress} 
-% Этот раздел должен быть отдельным структурным элементом по
-% ГОСТ, но он, как правило, включается в описание актуальности
-% темы. Нужен он отдельным структурынм элемементом или нет ---
-% смотрите другие диссертации вашего совета, скорее всего не нужен.
+Методы глобального освещения традиционно используются в компьютерной графике для синтеза фотореалистичных изображений. Программное обеспечение на их основе применяется в киноиндустрии, рекламе, САПР, дизайне помещений и офисов, компьютерных играх и симуляторах, а также во многих других системах виртуальной реальности. Расчет глобального освещения – вычислительно трудоемкая задача, для решения которой применяются высокопроизводительные распределенные системы.
+Традиционный способ визуализации динамических 3D сцен в реальном времени основан на растеризации, которая аппаратно ускоряется графическими процессорами. Однако растеризация не позволяет обрабатывать вторичное освещение и физически достоверные модели материалов и источников света. В то время как алгоритмы, основанные на трассировке лучей, позволяют получить все необходимые эффекты глобального освещения. Ведущими производителями графических процессоров анонсирована аппаратная поддержка трассировки лучей (Nvidia RTX), что, в перспективе, позволит дополнительно ускорить работу решения.
 
-{\aim} данной работы является \ldots
+{\aim} диссертационного исследования является разработка решения для интерактивной фотореалистичной визуализации сложных CSG моделей (содержащих миллионы примитивов).
 
-Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
+Поставленная цель требует решения следующих задач:
 \begin{enumerate}
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+  \item Исследовать существующие алгоритмы визуализации CSG моделей и возможность их применения на современных графических процессорах.
+  \item Разработать алгоритм визуализации CSG моделей, адаптированный для современных графических процессоров и совместимый с высокопроизводительными методами глобального освещения.
+  \item Разработать ускоряющую структуру, которая обеспечивает быстрое построение (при изменении структуры CSG дерева) и высокую скорость визуализации.
+  \item Разработать программный комплекс, реализующий предложенное решение с использованием инструментов параллельного программирования графических процессоров (OpenGL Compute Shaders).
+  \item Проверить корректность работы алгоритма визуализации путем сравнения полученных изображений с результатами работы других алгоритмов.
+  \item Оценить (и сравнить с аналогами) быстродействие программного комплекса, реализованных моделей и методов в задачах технической визуализации и фотореалистичной визуализации CSG моделей.
 \end{enumerate}
 
+\textbf{Предметом исследования} являются модели, методы и системные решения для  интерактивного синтеза фотореалистичных изображений сложных CSG сцен методами глобального освещения; алгоритмизация методов глобального освещения; способы представления, хранения и передачи моделей 3D сцен, допускающие эффективную  обработку на GPU; методы распараллеливания алгоритмов глобального освещения на массивно-параллельных GPU; современные технологии объектно-ориентированного программирования и метапрограммирования.
 
-{\novelty}
+{\methods} Решение задач диссертационной работы базируется на: теоретических основах информатики, методах и моделях компьютерной графики, численных методах, теоретических основах и моделях аналитической геометрии, теории алгоритмов и структур данных, а также методах параллельных вычислений.
+
+{\novelty} Получены следующие новые результаты в области интерактивного синтеза изображений CSG сцен методами глобального освещения на графическом процессоре:
+
+
 \begin{enumerate}
-  \item Впервые \ldots
-  \item Впервые \ldots
-  \item Было выполнено оригинальное исследование \ldots
+  \item Эффективная процедура оптимизации CSG дерева, включающая пространственную сортировку на базе методов построения иерархии ограничивающих объемов.
+  \item Интерактивный алгоритм пересечения луча с конструктивной геометрией, минимизирующий объем памяти, необходимый для поддержки состояния луча, адаптированный для массивно-параллельных архитектур.
+  \item Прямая фотореалистичная визуализация CSG модели методом оптимизированной («усеченной») двунаправленной трассировки путей.
 \end{enumerate}
 
-{\influence} \ldots
+{\influence}. С точки зрения практической значимости интерес представляет разработанный программный комплекс и отдельные его компоненты:
 
-{\methods} \ldots
+\begin{enumerate}
+  \item Высокоуровневая библиотека программ для интерактивной визуализации конструктивной геометрии GPU (техническая и фотореалистичная визуализация), которая может встраиваться в существующие либо новые САПР и применяться для разработки общих и специализированных систем визуализации с заданными свойствами.
+  \item Автономная система синтеза изображений CSG моделей в интерактивном режиме. Система может служить методическим пособием к вузовским курсам по компьютерной графике и автоматизированному проектированию.
+\end{enumerate}
 
 {\defpositions}
 \begin{enumerate}
-  \item Первое положение
-  \item Второе положение
-  \item Третье положение
-  \item Четвертое положение
-\end{enumerate}
-В папке Documents можно ознакомиться в решением совета из Томского ГУ
-в~файле \verb+Def_positions.pdf+, где обоснованно даются рекомендации
-по~формулировкам защищаемых положений. 
+  \item Эффективная процедура оптимизации CSG дерева, включающая пространственную сортировку на базе методов построения иерархии ограничивающих объемов.
+  \item Интерактивный алгоритм пересечения луча с конструктивной геометрией, минимизирующий объем памяти, необходимый для поддержки состояния луча, адаптированный для массивно-параллельных архитектур.
+  \item Прямая фотореалистичная визуализация CSG модели (без перехода к граничному представлению) методом оптимизированной («усеченной») двунаправленной трассировки путей.
+  \item Высокоуровневая программная библиотека для интерактивной визуализации конструктивной геометрии GPU (техническая и фотореалистичная визуализация), которая может встраиваться в существующие либо новые САПР и применяться для разработки общих и специализированных систем визуализации с заданными свойствами.
+\end{enumerate} 
 
-{\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
-
+{\reliability} результатов подтверждена путем сравнения полученных изображений с результатами работы других алгоритмов визуализации конструктивной геометрии, а также путем сравнения с эталонными изображениями для фотореалистичной визуализации.
 
 {\probation}
-Основные результаты работы докладывались~на:
-перечисление основных конференций, симпозиумов и~т.\:п.
+Основные результаты доложены и обсуждены на: международных конференциях по компьютерной графике и зрению GraphiCon (Санкт-Петербург, 2010; Москва, 2011, 2012;  Нижний Новгород, 2016); всероссийской конференции «Высокопроизводительные параллельные вычисления на кластерных системах» (Нижний Новгород, 2011); международной научной конференции по компьютерной графике, визуализации, компьютерному зрению WSCG'2013 (Пльзень, Чехия, 2013); X Международной научной конференции «Параллельные вычислительные технологии 2016» (ПаВТ-2016, Архангельск).
 
-{\contribution} Автор принимал активное участие \ldots
+% {\contribution} Автор принимал активное участие \ldots
 
 %\publications\ Основные результаты по теме диссертации изложены в ХХ печатных изданиях~\cite{Sokolov,Gaidaenko,Lermontov,Management},
 %Х из которых изданы в журналах, рекомендованных ВАК~\cite{Sokolov,Gaidaenko}, 
@@ -91,9 +70,9 @@
         \printbibliography[heading=countauthornotvak, env=countauthornotvak, keyword=biblioauthornotvak, section=1]%
         \printbibliography[heading=countauthor, env=countauthor, keyword=biblioauthor, section=1]%
         \nocite{%Порядок перечисления в этом блоке определяет порядок вывода в списке публикаций автора
-                vakbib1,vakbib2,%
-                confbib1,confbib2,%
-                bib1,bib2,%
+                % vakbib1,vakbib2,%
+                % confbib1,confbib2,%
+                % bib1,bib2,%
         }%
         \publications\ Основные результаты по теме диссертации изложены в \arabic{citeauthor} печатных изданиях, 
         \arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК, 
@@ -104,11 +83,12 @@
         \printbibliography[heading=countauthornotvak, env=countauthornotvak, keyword=biblioauthornotvak, section=2]%
         \printbibliography[heading=countauthorconf, env=countauthorconf, keyword=biblioauthorconf, section=2]%
         \printbibliography[heading=countauthor, env=countauthor, keyword=biblioauthor, section=2]%
-        \nocite{vakbib2}%vak
-        \nocite{bib1}%notvak
-        \nocite{confbib1}%conf
+        % \nocite{vakbib2}%vak
+        % \nocite{bib1}%notvak
+        % \nocite{confbib1}%conf
     \end{refsection}
 }
-При использовании пакета \verb!biblatex! для автоматического подсчёта
-количества публикаций автора по теме диссертации, необходимо
-их~здесь перечислить с использованием команды \verb!\nocite!.
+
+% При использовании пакета \verb!biblatex! для автоматического подсчёта
+% количества публикаций автора по теме диссертации, необходимо
+% их~здесь перечислить с использованием команды \verb!\nocite!.
