--- a/common/concl.tex
+++ b/common/concl.tex
@@ -1,9 +1,14 @@
-%% Согласно ГОСТ Р 7.0.11-2011:
-%% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
-%% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item На основе анализа \ldots
-  \item Численные исследования показали, что \ldots
-  \item Математическое моделирование показало \ldots
-  \item Для выполнения поставленных задач был создан \ldots
+  \item Предложен, реализован и экспериментально исследован алгоритм трассировки лучей, предназначенный для высокопроизводительной фотореалистичной визуализации в полноэкранном разрешении очень больших и структурно сложных сцен (до 1 миллиона примитивов, при глубине CSG дерева до 24), выполненных в конструктивном представлении (CSG). Задачи визуализации такой сложности возникают в CAD-системах в процессе проектирования высокотехнологичных технических объектов и крупных промышленных производств. В отличие от аналогов, алгоритм рассчитывает изображение за один проход и не накладывает ограничений на число примитивов и глубину дерева их структуры, позволяет получать точный результат без предварительной тесселяции CSG-сцены. Наивысшая производительность алгоритма достигается на GPU. Для технической визуализации достигается режим  реального времени, для фотореалистичной "--- режим интерактивного взаимодействия. В качестве примитивов могут использоваться классические формы и объекты, определяемые аналитически (в частности, поверхности второго порядка или неявно заданные функции). Число примитивов ограничено только доступной графической памятью, в то время как производительность линейно масштабируется с ростом числа и тактовой частоты вычислительных ядер.
+
+  \item Оптимизированы для GPU структуры данных и производительность процедуры MIS (multiple impotance sampling), важнейшей для производительности и качества результата методов глобального освещения.
+
+  \item В известный Kensler's CSG ray-tracing алгоритм (2006), введен высокоуровневый автомат со стековой памятью, управляющий алгоритмом Kensler-а, в результате чего построен итеративный алгоритм трассировки CSG адаптированный для GPU.
+
+  \item Предложен и реализован метод оптимизации CSG моделей, преобразующий входное дерево в пространственно-отсортированную форму близкую к сбалансированной. После оптимизации производительность визуализации зависит только от вычислительных возможностей GPU (в отличии от аналогов не имеет ограниченния пропускной способностью памяти).
+
+  \item Найдено оригинальное решение, обеспечивающее возможность глубокой оптимизации CSG дерева. Оптимизация декомпозирована на 4 шага: а) преобразование CSG-выражения в позитивную форму (представление только коммутативными операциями, разрешившее пространственную оптимизацию); б) пространственная оптимизация (со сборкой однородных операций в блоки); в)оптимизация высоты (балансировка) дерева; г) преобразование в исходную форму.
+
+  \item Разработано экспериментальное программное обеспечение способное на порядок увеличить производительность синтеза изображений сложных CSG-моделей в САПР и сделать процесс работы с проектами сложных технических комплексов и промышленных предприятий процессом реального времени.
+
 \end{enumerate}
