--- a/Dissertation/title_orig.tex
+++ b/Dissertation/title_orig.tex
@@ -1,10 +1,8 @@
 % Титульный лист (ГОСТ Р 7.0.11-2001, 5.1)
 \thispagestyle{empty}%
 \begin{center}%
-МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ \linebreak
-федеральное государственное автономное образовательное учреждение высшего образования \linebreak
-«Национальный исследовательский Нижегородский государственный университет им. Н.И. Лобачевского» \linebreak
-(ННГУ)
+\MakeUppercase{\thesisOrganization}
+
 \end{center}%
 %
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
@@ -30,7 +28,7 @@
 %
 \vspace{0pt plus6fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
 \begin{center}%
-{\large \MakeUppercase{\thesisAuthor}}
+{\large \thesisAuthor}
 \end{center}%
 %
 \vspace{0pt plus1fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
@@ -38,21 +36,16 @@
 \textbf {\large \thesisTitle}
 
 \vspace{0pt plus2fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
-{\small
-% Специальность \thesisSpecialtyNumber~---
+{%\small
+Специальность \thesisSpecialtyNumber~---
 
-% <<\thesisSpecialtyTitle>>
-Направление подготовки 09.06.01 «Информатика и вычислительная техника»
-Направленность подготовки 05.13.18 «Математическое моделирование, численные методы и комплексы программ»
+<<\thesisSpecialtyTitle>>
 }
 
 \vspace{0pt plus2fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
-\textbf {
-Научно-квалификационная работа \linebreak
-(диссертация)
-}
+Диссертация на соискание учёной степени
 
-% \thesisDegree
+\thesisDegree
 \end{center}%
 %
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
@@ -60,8 +53,8 @@
 Научный руководитель:
 
 \supervisorRegalia
-\linebreak профессор ННГУ им. Н.И. Лобачевского \linebreak
-\textbf {\supervisorFio}
+
+\supervisorFio
 \end{flushright}%
 %
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
