--- a/common/data.tex
+++ b/common/data.tex
@@ -8,12 +8,12 @@
     }%
 }
 \newcommand{\thesisAuthorShort}        % Диссертация, ФИО автора инициалами
-{\todo{И.О.~Фамилия}}
+{\todo{Д.Я.~Ульянов}}
 
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\todo{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{\todo{\MakeUppercase{Название диссертационной работы}}}{Название диссертационной работы}}
+{Лучевые методы в 3D визуализации сцен виртуальной реальности и объектов машиностроения}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
 {\texorpdfstring{\todo{XX.XX.XX}}{XX.XX.XX}}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название
@@ -25,7 +25,7 @@
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
 {Нижний Новгород}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{\todo{20XX}}
+{2018}
 \newcommand{\thesisOrganization}       % Диссертация, организация
 {Нижегородский государственный университет им. Н.И.~Лобачевского}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
@@ -37,7 +37,7 @@
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
 {Турлапов Вадим Евгеньевич}
 \newcommand{\supervisorRegalia}        % Научный руководитель, регалии
-{\todo{уч. степень, уч. звание}}
+{доктор технических  наук,  доцент,}
 \newcommand{\supervisorFioShort}       % Научный руководитель, ФИО
 {В.Е.~Турлапов}
 \newcommand{\supervisorRegaliaShort}   % Научный руководитель, регалии
